--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ plugins {
         androidExtensions {
             experimental = true
         }
+
+
     }
 
 dependencies {
@@ -62,6 +64,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //mockito
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
